src/App.css
* {
  box-sizing: border-box;
}

.App {
  text-align: center;
  background-color: #282c34;
  
}

.App-logo {
  height: 30vmin;
  pointer-events: none;
  border-radius: 30px;
  box-shadow:  0px 0px 40px 40px red;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 25s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 75vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

@media (prefers-reduced-motion: no-preference) {
  .loader {
    animation: loader-spin infinite 25s linear;
  }
}


@keyframes loader-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

a:link {
  color: #fff;
  text-decoration: none;
}

a:visited {
  color: #fff;
}

header h1, p {
  margin: 50px;
}

li {
  list-style: none;
}

.gallery {
  display: flex;
  flex-direction: row ;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  padding: 20px 10px;
  max-width: 1400px;
  margin: 10px auto;
  gap: 16px;
}

.header-container {
  display: flex;
  flex-direction: column;
  border-bottom: 1px solid #fff;
  padding: 2.3em 0;
}

.logo {
  margin-left: 5%;
  font-size: 50px;
}

nav {
  margin: 1.53m 0 0 5%;
}

.header-container ul li {
  display: inline;
  padding: 0 1.4em 0 0 ;
  font-size: 0.8em;
}

.header-container ul li a {
  text-decoration: none;
}

@media screen and (min-width: 600px) {
  .header-container {
    flex-direction: row;
    justify-content: space-between;
  }

  .logo {
    margin-left: 2.3em;
  }

  nav {
    align-self: center;
    margin: 0 0.8em 0 0;
  }

}

.textbar {
  background-color: #fff;
  color: #282c34;
  margin: 0;
  padding: 0;
  text-align: center;
}

.textbar h6 {
  margin: 0;
}

